--- a/package.json
+++ b/package.json
@@ -4,11 +4,25 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "node server",
+	"dev": "nodemon server"
   },
-  "author": "",
+  "author": "Ian Moses",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.17.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Moses-Ian/note-taker.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/Moses-Ian/note-taker/issues"
+  },
+  "homepage": "https://github.com/Moses-Ian/note-taker#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
